# embeded_development_for_robotics

./: CMakeLists.txt  README.md
cmake/: build_helper.cmake
vehicles/: CMakeLists.txt
vehicles/MAVUAV/: CMakeLists.txt  README.md  main.cc
vehicles/MAVUAV/mode_config/: control_modes.h  task_config.h
vehicles/MAVUAV/task/Inc/: communication_task.h  imu_task.h  led_task.h  selftest_task.h  suction_task.h  system_state_task.h  transform_task.h  vehicle_task.h
vehicles/MAVUAV/task/Src/: communication_task.cc  imu_task.cc  led_task.cc  selftest_task.cc  suction_task.cc  system_state_task.cc  transform_task.cc  vehicle_task.cc
